  (Anil Madhavapeddy, review by Gabriel Scherer, Tom Kelly,
   Michael Hendricks and KC Sivaramakrishnan).

- #10950: Do not use mmap to allocate Caml_state.
  In order to reduce virtual memory usage, we dynamically allocate
  the domain_state structure.
  (Enguerrand Decorne, KC Sivaramakrishnan and Tom Kelly,
  review by Anil Madhavapeddy and Gabriel Scherer)

- #11010: Use strerror_r for reentrant error string conversion.
  (Anil Madhavapeddy and Xavier Leroy, review by same and Edwin Török)

- #11002: Do not use Begin_roots/End_roots macros in the runtime system.  Also
  fix a missing root registration in the implementation of Unix.write on
  Windows.
  (Nicolás Ojeda Bär, review by Xavier Leroy and David Allsopp)

### Code generation and optimizations:

- #10972: ARM64 multicore support: OCaml & C stack separation;
  dynamic stack size checks; fiber and effects support.
  (Tom Kelly and Xavier Leroy, review by KC Sivaramakrishnan, Xavier Leroy
  Guillaume Munch-Maccagnoni, Eduardo Rafael, Stephen Dolan and
  Gabriel Scherer)

### Standard library:

- #10742: Use LXM as the pseudo-random number generator for module Random.
  Add `Random.State.split` and `Random.split` to "split" a PRNG off
  another PRNG.
  (Xavier Leroy, review by Gabriel Scherer and Hugo Heuzard)

* #10867: Remove deprecated values: Array.create, Array.make_float,
  Array.create_matrix, Bytes.uppercase, Bytes.lowercase, Bytes.capitalize,
  Bytes.uncapitalize, Char.lowercase, Char.uppercase, Filename.temp_dir_name,
  Int32.format, Int64.format, Nativeint.format, Format.bprintf, Format.kprintf,
  Format.set_all_formatter_output_functions,
  Format.get_all_formatter_output_functions,
  Format.pp_set_all_formatter_output_functions,
  Format.pp_get_all_formatter_output_functions, Format.pp_open_tag,
  Format.pp_close_tag, Format.open_tag, Format.close_tag,
  Format.formatter_tag_functions, Format.pp_set_formatter_tag_functions,