@@ -84,7 +84,8 @@ typedef enum {
     EV_MINOR_REMEMBERED_SET,
     EV_MINOR_REMEMBERED_SET_PROMOTE,
     EV_MINOR_LOCAL_ROOTS_PROMOTE,
-    EV_DOMAIN_CONDITION_WAIT
+    EV_DOMAIN_CONDITION_WAIT,
+    EV_DOMAIN_RESIZE_HEAP_RESERVATION,
 } ev_gc_phase;
 
 typedef enum {
